# MiniSQL

./: .gitignore  CMakeLists.txt  main.cpp  testrm.cpp
API/: API.cpp  API.h  CMakeLists.txt  SQLExecError.cpp  SQLExecError.h
BufferManager/: BufferManager.cpp  BufferManager.hpp  CMakeLists.txt  Page.cpp  Page.hpp  test.cpp
CatalogManager/: Attribute.cpp  Attribute.h  CMakeLists.txt  CatalogManager.cpp  CatalogManager.h  Index.h  Table.cpp  Table.h
IndexManager/: .gitignore  BPlusTree.h  CMakeLists.txt  IndexManager.h
Interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  SQLStatement.cpp  SQLStatement.h  SQLStmtError.cpp  SQLStmtError.h
RecordManager/: CMakeLists.txt  README.md  RecordManager.cpp  RecordManager.h
